--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.26.2",
+    "decimal.js": "^10.6.0",
+    "framer-motion": "^12.27.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
